# GLM-CODE

./: .gitignore  COMMANDES.md  INSTALL-MAC-OLLAMA.md  Lancer-GLM-Code.bat  Lancer-GLM-Mac.command  README.md  config.example.toml  pyproject.toml  requirements.txt
config/: QUICKSTART.md  README.md
docs/: ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTORS.md  FAQ.md  FEATURES.md  GOVERNANCE.md  INTERNATIONALIZATION.md  MAINTENANCE.md  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  TUTORIALS.md  contributing.md  development.md  examples.md
glmcode/: __init__.py  __version__.py  agent.py  cli.py  client.py  coder.py  config.py  context_manager.py  git_intelligence.py  knowledge_graph.py  motd.py  performance_monitor.py  planner.py  refactor_engine.py  remote.py  runtime.py  semantic_search.py  session.py  skills.py  tools.py  tui.py  ui.py  updater.py  version.py
glmcode/builtin_skills/: README.md  debug.md  explique.md  generate-code.md  refactor.md  review-code.md  revue-code.md  tests.md
install/: install.bat  install.ps1  install.sh  nettoyer-et-installer.bat  nettoyer-et-installer.ps1  nettoyer-et-installer.sh  uninstall.ps1  uninstall.sh
model/: model_coder_free.txt
